--- a/config.env
+++ b/config.env
@@ -1,20 +1,20 @@
 #________COMPULSORY____________
 
-TG_BOT_TOKEN= "5736478603:AAFWKD_4ajBPXV52NsYzi2fXssWWQHF1lUY"
-APP_ID = 18238683
-API_HASH = "1068ecf4ac70a8f6ac161b7512bbf128"
-OWNER_ID = 5543917190
+TG_BOT_TOKEN= "5078575505:AAGoXfcYLrtZVGDvQox2AT1SvMtL4pGhdlo"
+APP_ID = 8978848
+API_HASH = "24ce3cff2d32cf529df1c0018e28d6cf"
+OWNER_ID = 1995886602
 
 # Add different ID separated by a SPACE (Like :: AUTH_CHANNEL = -10012503747 -10012586941 539295917)
-AUTH_CHANNEL = -1001635741120
+AUTH_CHANNEL = -1001816242004
 
 
 #__________NOT ________COMPULSORY____________ ::
 
 # For RCLONE ::
 # Name of the folder....not ID
-DESTINATION_FOLDER = "Anuragcloud"
-INDEX_LINK = "https://winter.anuragcloud.workers.dev/0:"
+DESTINATION_FOLDER = ""
+INDEX_LINK = ""
 
 # OTHERS ::
 EDIT_SLEEP_TIME_OUT = 15
